# locify

./: pyproject.toml
benchmarks/cache/: README.md  cache_bench.py  cache_warmup_bench.py  cache_warmup_bench_with_tags_cache.py
locify/indexing/full_map/: strategy.py
locify/indexing/repo_map/: strategy.py
locify/tree_sitter/: parser.py
locify/tree_sitter/queries/: tree-sitter-solidity-tags.scm
locify/utils/: file.py
tests/integration/: test_repo_map_strategy.py
tests/unit/: test_chat_hist_utils.py  test_file_utils.py  test_tree_sitter_parser.py
