[tool.poetry]
name = "locify"
version = "0.0.6"
description = "A library for LLM-based agents to navigate large codebases efficiently."
authors = ["Hoang Tran <descience.thh10@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "locify/**/*" },
]

[tool.poetry.dependencies]
python = ">=3.10"
litellm = "*"
tree-sitter = ">=0.22.0"
# install from local directory
grep-ast = { git = "https://github.com/Nurchik/grep-ast.git" }
gitpython = "*"
networkx = "*"
numpy = "*"
pandas = "*"
scipy = "*"
fire = "*"
diskcache = "^5.6.3"


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
pre-commit = "^4.0.1"


[tool.poetry.group.benchmark.dependencies]
matplotlib = "^3.9.2"
memory-profiler = "^0.61.0"
seaborn = "^0.13.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.autopep8]
# autopep8 fights with mypy on line length issue
ignore = [ "E501" ]

[tool.black]
# prevent black (if installed) from changing single quotes to double quotes
skip-string-normalization = true

[tool.ruff.lint]
select = ["D"]
# ignore warnings for missing docstrings
ignore = ["D1"]

[tool.ruff.lint.pydocstyle]
convention = "google"
